contrast fixed

--- a/styles/base.css
+++ b/styles/base.css
@@ -241,9 +241,9 @@ iframe{
     left: 25%;
     transform: translate(-50%, -50%);
     padding: 1vw 2vw;
-    background-color: rgb(42, 91, 205, 50%);
+    background-color: rgba(121, 160, 250, 0.5);
     border: solid #111658;
-    color: #1d4d72;
+    color: #000000;
     text-align: center;
     text-decoration: none;
     font-weight: bolder;
